--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,8 @@ springBoot {
     buildInfo()          
 }
 
+ext['log4j2.version'] = '2.15.0'
+
 dependencies {
    
     compile 'org.springframework.boot:spring-boot-starter-web'       
@@ -80,6 +82,7 @@ dependencies {
     compile 'commons-cli:commons-cli:1.4'
     compile 'cglib:cglib:2.2.2'
     compile 'com.maxmind.geoip2:geoip2:2.15.0'
+    // log4j upgrade for vulnerability CVE-2021-44228
     compile 'org.apache.logging.log4j:log4j-api:2.15.0'
 
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
