--- a/build.gradle
+++ b/build.gradle
@@ -108,9 +108,11 @@ dependencies {
   //implementation 'commons-io:commons-io:2.14.0'
   //implementation 'commons-cli:commons-cli:1.4'
   implementation 'cglib:cglib:3.3.0'
-
+  implementation 'com.google.protobuf:protobuf-java:3.25.5'
+  
   // fhir dependencies
   implementation 'ca.uhn.hapi.fhir:hapi-fhir-base:7.4.5';
+  implementation 'ca.uhn.hapi.fhir:org.hl7.fhir.utilities::7.4.5';
   implementation 'ca.uhn.hapi.fhir:hapi-fhir-structures-r4:7.4.5'
   implementation 'ca.uhn.hapi.fhir:hapi-fhir-structures-r5:7.4.5'
   implementation 'ca.uhn.hapi.fhir:hapi-fhir-server:7.4.5'
@@ -125,8 +127,18 @@ dependencies {
     exclude group: 'org.glassfish', module: 'javax.el'
     exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
   }
-  implementation('ca.uhn.hapi.fhir:hapi-fhir-server-openapi:7.4.5') {
-  }
+  implementation 'ca.uhn.hapi.fhir:hapi-fhir-server-openapi:7.4.5'
+
+  // For the moment, these require explicit 6.4 until we can update from 7.4.5
+  implementation 'ca.uhn.hapi.fhir:org.hl7.fhir.convertors:6.4.0'
+  implementation 'ca.uhn.hapi.fhir:org.hl7.fhir.dstu2:6.4.0'
+  implementation 'ca.uhn.hapi.fhir:org.hl7.fhir.dstu2016may:6.4.0'
+  implementation 'ca.uhn.hapi.fhir:org.hl7.fhir.dstu3:6.4.0'
+  implementation 'ca.uhn.hapi.fhir:org.hl7.fhir.r4:6.4.0'
+  implementation 'ca.uhn.hapi.fhir:org.hl7.fhir.r4b:6.4.0'
+  implementation 'ca.uhn.hapi.fhir:org.hl7.fhir.r5:6.4.0'
+  implementation 'ca.uhn.hapi.fhir:org.hl7.fhir.utilities:6.4.0'
+  implementation 'ca.uhn.hapi.fhir:org.hl7.fhir.validation:6.4.0'
 
   // Lombok dependencies
   //implementation 'org.projectlombok:lombok:1.18.32'
