--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,7 @@ dependencies {
   implementation "ca.uhn.hapi.fhir:hapi-fhir-structures-r5:7.4.5"
   implementation "ca.uhn.hapi.fhir:hapi-fhir-server:7.4.5"
   implementation("ca.uhn.hapi.fhir:hapi-fhir-jpaserver-base:7.4.5") {
+    exclude group: "net.minidev", module: "json-smart"
     exclude group: "ca.uhn.hapi.fhir", module: "hapi-fhir-sql-migrate"
     exclude group: "org.elasticsearch.client", module: "elasticsearch-rest-high-level-client"
     exclude group: "org.elasticsearch.client", module: "elasticsearch-rest-client"
@@ -159,7 +160,9 @@ dependencies {
   /*
    * Test Dependencies
   */
-  testImplementation "org.springframework.boot:spring-boot-starter-test"
+  testImplementation("org.springframework.boot:spring-boot-starter-test") {
+    exclude group: "net.minidev", module: "json-smart"
+  }
   testImplementation "org.opensearch.client:spring-data-opensearch-test-autoconfigure:1.5.3"
   testImplementation "org.junit.jupiter:junit-jupiter-params:5.10.5"
   testImplementation "org.junit.jupiter:junit-jupiter-api:5.10.5"
